# supernova

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  test_worker.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
liquid_swarm/: __init__.py  __main__.py  cli.py  config.py  daemon.py  graph.py  ledger.py  memory.py  models.py  nodes.py  persistence.py  providers.py  state.py  synthesis.py  tools.py  web_search.py
tests/: __init__.py  conftest.py  test_assassin_node.py  test_async_worker.py  test_auth.py  test_cost_ledger.py  test_features.py  test_live_nvidia.py  test_persistence.py  test_providers.py  test_rate_limit.py  test_retry.py  test_routing.py  test_synthesis.py  test_timeout.py  test_web_search.py
tests/features/: swarm.feature
tests/step_defs/: __init__.py  test_swarm_steps.py
web/: app.py
web/static/: index.html
