[project]
name = "supernova"
version = "1.0.0"
description = "Massively parallel, provider-agnostic AI agent orchestration framework."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    {name = "MiMi Tech Ai UG", email = "hello@mimitech.ai"},
]
readme = "README.md"
keywords = ["ai", "agents", "langgraph", "swarm", "parallel", "nvidia-nim", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langsmith>=0.3",
    "chromadb>=0.6",
    "langgraph-checkpoint-sqlite>=0.2",
    "instructor>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckduckgo-search>=7.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "langchain-chroma>=1.1.0",
    "aiosqlite>=0.22.1",
]

[project.urls]
Homepage = "https://github.com/mimitechai/supernova"
Repository = "https://github.com/mimitechai/supernova"
Issues = "https://github.com/mimitechai/supernova/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-bdd>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["liquid_swarm"]

[tool.coverage.report]
fail_under = 90
show_missing = true
