[project]
name = "supernova-swarm"
version = "1.0.0"
description = "Massively parallel, provider-agnostic AI agent orchestration. Decompose → Execute N agents in parallel → Synthesize."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    {name = "MiMi Tech Ai UG", email = "hello@mimitech.ai"},
]
readme = "README.md"
keywords = [
    "ai", "agents", "langgraph", "swarm", "parallel", "nvidia-nim", "llm",
    "multi-agent", "orchestration", "openai", "anthropic", "ollama",
    "map-reduce", "rag", "search-augmented-generation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langsmith>=0.3",
    "chromadb>=0.6",
    "langgraph-checkpoint-sqlite>=0.2",
    "instructor>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckduckgo-search>=7.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "langchain-chroma>=1.1.0",
    "aiosqlite>=0.22.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg>=3.3.3",
    "psycopg-pool>=3.3.0",
]

[project.scripts]
supernova = "liquid_swarm.cli:main"

[project.urls]
Homepage = "https://github.com/mimitechai/supernova"
Repository = "https://github.com/mimitechai/supernova"
Issues = "https://github.com/mimitechai/supernova/issues"
Documentation = "https://github.com/mimitechai/supernova#readme"
Changelog = "https://github.com/mimitechai/supernova/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-bdd>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
memory-local = [
    # Free local embeddings — no API key required
    "sentence-transformers>=3.0",
]
postgres = [
    "psycopg[binary]>=3.3",
    "psycopg-pool>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["liquid_swarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests that hit live APIs (deselect with -m 'not live')",
    "slow: marks slow tests",
]

[tool.coverage.run]
source = ["liquid_swarm"]
omit = ["liquid_swarm/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
